<resources>
    <string name="app_name">MM Channels</string>
    <string name="content_authority">com.padc.mmchannels</string>

    <string name="action_settings">Settings</string>
    <string name="menu_title_save">Save</string>

    <string name="title_activity_channel_detail">Channel Detail</string>

    <string name="lbl_login">Login</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_register_action">Register</string>
    <string name="lbl_logout">Logout</string>

    <string name="action_share">Share</string>

    <string name="nav_tv_guide_home">Home</string>
    <string name="nav_tv_guide_my_channels">My Channels</string>
    <string name="nav_tv_guide_my_watchlist">My Watchlist</string>
    <string name="nav_tv_guide_my_reminders">My Reminders</string>
    <string name="nav_tv_guide_news_n_reviews">News and Reviews</string>
    <string name="nav_tv_guide_settings">Settings</string>
    <string name="nav_tv_guide_help">Help</string>
    <string name="nav_tv_guide_about">About</string>

    <string name="title_activity_program_detail">ProgramDetailActivity</string>
    <string name="title_activity_program_parent">ProgramParentActivity</string>

    <string-array name="dummy_channel_list">
        <item>4 TV</item>
        <item>4 Comedy</item>
        <item>4 Edu</item>
        <item>4 Info</item>
        <item>4 Ladies</item>
        <item>4 Sports</item>
        <item>4 Tunes</item>
        <item>5 Cartoons</item>
        <item>5 Movies</item>
        <item>5 Plus</item>
        <item>5 Special</item>
        <item>Buddha tv</item>
    </string-array>

    <string-array name="dummy_my_channel">
        <item>4 Comedy</item>
        <item>4 Edu</item>
        <item>4 Sports</item>
        <item>4 Tunes</item>
        <item>5 Cartoons</item>
        <item>5 Movies</item>
    </string-array>

    <string-array name="dummy_channel_detail_list">
        <item>Winter is coming</item>
        <item>အစဥ္အလာႀကီးမား ျမန္မာ့ဓေလ့မ်ား</item>
        <item>သူမတူတဲ႔ ေခြ်းမမ်ား (အပိုင္း-၈၀)</item>
        <item>ဂီတရဲ႕ ၾကယ္စင္</item>
        <item>Japanese food</item>
        <item>Trip to Korea</item>
        <item>International News</item>
    </string-array>

    <string-array name="dummy_my_watch_list">
        <item>Winter is coming</item>
        <item>သူမတူတဲ႔ ေခြ်းမမ်ား (အပိုင္း-၈၀)</item>
        <item>ဂီတရဲ႕ ၾကယ္စင္</item>
        <item>Trip to Korea</item>
        <item>International News</item>
    </string-array>

    <string-array name="dummy_my_reminder_list">
        <item>Winter is coming</item>
        <item>ဂီတရဲ႕ ၾကယ္စင္</item>
    </string-array>

    <string-array name="dummy_program_list">
        <item>ProgramName One SE1 Episode1</item>
        <item>ProgramName Two SE1 Episode-2</item>
        <item>ProgramName Three SE1 EP-3</item>
        <item>ProgramName Four SE1 EP4</item>
    </string-array>

    <string-array name="dummy_alarm_prefix">
        <item>none</item>
        <item>when program starts</item>
        <item>5 mins to start</item>
        <item>15 mins to start</item>
        <item>30 mins to start</item>
        <item>45 mins to start</item>
        <item>1 hour to start</item>
    </string-array>

</resources>
